unpackaged/main/default/objects/Opportunity/fields/BP_100_Percent_30_Days_Date__c.field-meta.xml
<CustomField>
    <fullName>BP_100_Percent_30_Days_Date__c</fullName>
    <description>This field will be populated by workflow upon the customer completing pay back of their merchant loan.  It will contain the date that is the first business day, 30 days after the loan pay back is completed if a renewal has not been funded.</description>
    <inlineHelpText>This field will be populated by workflow upon the customer completing pay back of their merchant loan.  It will contain the date that is the first business day, 30 days after the loan pay back is completed if a renewal has not been funded.</inlineHelpText>
    <label>BP 100% + 30 Days Date</label>
    <type>Date</type>
</CustomField>