unpackaged/main/default/objects/Opportunity/fields/Brand_Experience__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience__c</fullName>
    <description>Introduced as part of the Quick Bridge to National Funding migration project to capture which brand experience this opportunity relates to. This field should control which DFP experience the guarantors see when loading the opportunity. This field is used in conjunction with DFP Token - Brand Experience to present the correct opportunity for the payload being used.</description>
    <inlineHelpText>Displays which brand the guarantor sees when loading the DFP</inlineHelpText>
    <label>Brand Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_Brand</valueSetName>
    </valueSet>
</CustomField>