unpackaged/main/default/objects/Opportunity/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Broker Account)</relationshipLabel>
    <relationshipName>Broker_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>