unpackaged/main/default/objects/Opportunity/fields/Broker_Buy_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Broker_Buy_Ratio__c</fullName>
    <description>This field will contain the ratio at which the broker bought the deal.</description>
    <inlineHelpText>This field will contain the ratio at which the broker bought the deal.</inlineHelpText>
    <label>Broker Buy Ratio</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>