unpackaged/main/default/objects/Opportunity/fields/Broker_Deal_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Broker_Deal_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Deal Bundle</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Broker_Deal_Bundle__c.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Broker_Deal_Bundle__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Related_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>