unpackaged/main/default/objects/Opportunity/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <label>Broker Email</label>
    <type>Email</type>
</CustomField>