unpackaged/main/default/objects/Opportunity/fields/Broker_Oppty_Owner_Changed__c.field-meta.xml
<CustomField>
    <fullName>Broker_Oppty_Owner_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by a workflow when the Owner of a Renewal Broker Opportunity has changed, which will then fire a workflow to update the Oppty Team Members and Oppty Splits</description>
    <label>Broker Oppty Owner Changed</label>
    <type>Checkbox</type>
</CustomField>