unpackaged/main/default/objects/Opportunity/fields/Broker_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Preferred_Email__c</fullName>
    <label>Broker Preferred Email</label>
    <type>Email</type>
</CustomField>