unpackaged/main/default/objects/Opportunity/fields/Broker_Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Submission_Number__c</fullName>
    <displayFormat>NFP-{000000}</displayFormat>
    <label>Broker Submission Number</label>
    <type>AutoNumber</type>
</CustomField>