unpackaged/main/default/objects/Opportunity/fields/Bronze_Review__c.field-meta.xml
<CustomField>
    <fullName>Bronze_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PILOT - This field will be used to indicate when a deal should be reviewed for a Bronze approval.</description>
    <inlineHelpText>PILOT - This field will be used to indicate when a deal should be reviewed for a Bronze approval.  
***Check the box only in the event of a bronze approval review being needed.</inlineHelpText>
    <label>Bronze Review</label>
    <type>Checkbox</type>
</CustomField>