unpackaged/main/default/objects/Opportunity/fields/Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate__c</fullName>
    <description>Buy Rate for actuals</description>
    <inlineHelpText>Buy Rate for actuals</inlineHelpText>
    <label>Buy Rate</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>