unpackaged/main/default/objects/Opportunity/fields/Buy_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Buy_Ratio__c</fullName>
    <label>Buy Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>