unpackaged/main/default/objects/Opportunity/fields/Calc_Net_From_Lender__c.field-meta.xml
<CustomField>
    <fullName>Calc_Net_From_Lender__c</fullName>
    <description>The calculated net amount we should retrieve from the Lease lender</description>
    <inlineHelpText>The calculated net amount we should retrieve from the Lease lender</inlineHelpText>
    <label>Calc Net From Lender</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>