unpackaged/main/default/objects/Opportunity/fields/Calc_Net_Proceeds_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Calc_Net_Proceeds_For_Actual__c</fullName>
    <description>Calc Net Proceeds</description>
    <inlineHelpText>[Calc Net Proceeds] = [Discount PV] – [Int Settlement] – [Lender Doc Fee] –[Fee 1 Amount] – [Fee 2 Amount]  – [Lost Margin] – [Equip Cost]</inlineHelpText>
    <label>Calc Net Proceeds</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>