unpackaged/main/default/objects/Opportunity/fields/Cash_Flow_Input__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Input__c</fullName>
    <description>Timestamp of when Cash Flow is completed via Ocrolus. Utilized for List View filters.</description>
    <label>Cash Flow Input</label>
    <type>DateTime</type>
</CustomField>