unpackaged/main/default/objects/Opportunity/fields/Chargeoff_Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Batch_Date__c</fullName>
    <description>Determines the date the loan will be included in the Batch Create Matters process</description>
    <label>Chargeoff Batch Date</label>
    <type>Date</type>
</CustomField>