unpackaged/main/default/objects/Opportunity/fields/Co_Lessee_del__c.field-meta.xml
<CustomField>
    <fullName>Co_Lessee_del__c</fullName>
    <description>This field will capture the name of a Co-Lessee on a lease transaction.</description>
    <inlineHelpText>Type in the name of a Co-Lessee in this field for documentation purposes.</inlineHelpText>
    <label>Co-Lessee</label>
    <length>64</length>
    <type>Text</type>
</CustomField>