unpackaged/main/default/objects/Opportunity/fields/Commencement_Date_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date_For_Actual__c</fullName>
    <description>Commencement Date for actuals</description>
    <inlineHelpText>Commencement Date for actuals</inlineHelpText>
    <label>Commencement Date</label>
    <type>DateTime</type>
</CustomField>