unpackaged/main/default/objects/Opportunity/fields/Commercial_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Analyst</relationshipName>
    <type>Lookup</type>
</CustomField>