unpackaged/main/default/objects/Opportunity/fields/Company_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_DBA__c</fullName>
    <description>This field is the location specific DBA for the opportunity. The logic behind the field is as follows- If the DBA (Multiple Locations) is populated, then populate the field with that DBA, if it isn't populate with the Account DBA.</description>
    <formula>IF(DBA_Multiple_Locations__c = "", Account.Company_DBA__c,  DBA_Multiple_Locations__c )</formula>
    <inlineHelpText>This field displays the DBA to the physical location associated with this opportunity.</inlineHelpText>
    <label>Company DBA</label>
    <type>Text</type>
</CustomField>