unpackaged/main/default/objects/Opportunity/fields/Compliance_Documents_Signed__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Documents_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to determine if the signor signed the truth in lending docs. Will be used in services to determine if DFP needs to present the TIL docs during checkout</description>
    <inlineHelpText>Has the signor completed the truth in lending documents?</inlineHelpText>
    <label>Compliance Documents Signed</label>
    <type>Checkbox</type>
</CustomField>