unpackaged/main/default/objects/Opportunity/fields/Conga_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Id__c</fullName>
    <description>Adobe Sign Links Conga template id. Introduced as part of the QB migration into NF to be used for QB branded automation</description>
    <formula>IF( TEXT(Brand_Experience__c)='Quick Bridge',$Setup.Conga_Template_Ids__c.QB_Prequal__c, $Setup.Conga_Template_Ids__c.NF_Prequal__c )</formula>
    <label>Conga Template Id</label>
    <type>Text</type>
</CustomField>