unpackaged/main/default/objects/Opportunity/fields/Contact_Without_Ownership_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Without_Ownership_Phone__c</fullName>
    <label>Contact Without Ownership Phone</label>
    <type>Phone</type>
</CustomField>