unpackaged/main/default/objects/Opportunity/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <description>This field is populated by a workflow.  This field will be populated with the date that an MCA/ML opportunity stage changes to Conversion.</description>
    <inlineHelpText>This is a read only field.  This field will be populated with the date that an MCA/ML opportunity stage changes to Conversion.</inlineHelpText>
    <label>Conversion Date</label>
    <type>DateTime</type>
</CustomField>