unpackaged/main/default/objects/Opportunity/fields/CR_Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Business_Start_Date__c</fullName>
    <label>CR Business Start Date</label>
    <type>Date</type>
</CustomField>