unpackaged/main/default/objects/Opportunity/fields/CR_PG2_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>CR_PG2_Credit_Score__c</fullName>
    <label>CR PG2 Credit Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>