unpackaged/main/default/objects/Opportunity/fields/Credit_Analyst_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Date__c</fullName>
    <label>Credit Analyst Date</label>
    <type>DateTime</type>
</CustomField>