unpackaged/main/default/objects/Opportunity/fields/Credit_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will indicate the credit processor for the opportunity.</description>
    <inlineHelpText>This field will indicate the credit processor for the opportunity.</inlineHelpText>
    <label>Credit Processor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Director of Operations</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Operations</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>