unpackaged/main/default/objects/Opportunity/fields/Credit_Tier_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Credit_Tier_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Credit Tier for Actual</description>
    <inlineHelpText>Credit Tier for Actual</inlineHelpText>
    <label>Credit Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>