unpackaged/main/default/objects/Opportunity/fields/Cross_Corp_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Cross_Corp_Street_Address__c</fullName>
    <label>Cross Corp Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>