unpackaged/main/default/objects/Opportunity/fields/Cross_Corp_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Cross_Corp_Zip_Code__c</fullName>
    <label>Cross Corp Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>