unpackaged/main/default/objects/Opportunity/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>This field will capture the customers current internal funding balance.  It will be updated daily from Lease Plus.</description>
    <inlineHelpText>This field will capture the customers current internal funding balance.  Updated daily from lease plus.</inlineHelpText>
    <label>Existing Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>