unpackaged/main/default/objects/Opportunity/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <description>This field captures the Date Established Associated with the Opportunity.  It is a formula field.</description>
    <formula>BLANKVALUE( Date_Established_Multiple_Locations__c , Account.Date_Established__c )</formula>
    <inlineHelpText>This field captures the Date Established Associated with the Opportunity.  It is a formula field.</inlineHelpText>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>