unpackaged/main/default/objects/Opportunity/fields/Date_Established_Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Date_Established_Multiple_Locations__c</fullName>
    <description>If an account has multiple locations, use this field to enter the date that corresponds to when this location was established.</description>
    <inlineHelpText>If an account has multiple locations, use this field to enter the date that corresponds to when this location was established.</inlineHelpText>
    <label>Date Established (Multiple Locations)</label>
    <type>Date</type>
</CustomField>