unpackaged/main/default/objects/Opportunity/fields/Date_Funds_Needed_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_Needed_from_Lead__c</fullName>
    <inlineHelpText>Mapped from Lead Field:  Date_Funds_Needed__C</inlineHelpText>
    <label>Date Funds Needed from Lead</label>
    <type>Date</type>
</CustomField>