unpackaged/main/default/objects/Opportunity/fields/Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation__c</fullName>
    <description>Customer's Company Date of Incorporation</description>
    <inlineHelpText>Type in the Date of Incorporation of the Corporation</inlineHelpText>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>