unpackaged/main/default/objects/Opportunity/fields/Date_on_Docs__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Docs__c</fullName>
    <description>Date that the legal documents were prepared</description>
    <inlineHelpText>Date that the legal documents were prepared</inlineHelpText>
    <label>Date on Docs</label>
    <type>Date</type>
</CustomField>