unpackaged/main/default/objects/Opportunity/fields/Days_b_w_Activation_Date_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_b_w_Activation_Date_Fund_Date__c</fullName>
    <formula>IF(NOT(ISBLANK( Account.Activation_Date__c )) &amp;&amp; NOT(ISBLANK(Fund_Date__c)) ,  DATEVALUE(Fund_Date__c)-Account.Activation_Date__c , 
IF(NOT(ISBLANK( Account.Activation_Date__c )) &amp;&amp; ISBLANK(Fund_Date__c) , today()-Account.Activation_Date__c ,
0))</formula>
    <label>Days b/w Activation Date &amp; Fund Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>