unpackaged/main/default/objects/Opportunity/fields/Days_b_w_Docs_in_Date_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_b_w_Docs_in_Date_Fund_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(  Docs_In_Date__c  )) &amp;&amp; NOT(ISBLANK(Fund_Date__c)) , DATEVALUE(Fund_Date__c)- DATEVALUE(Docs_In_Date__c), 
IF(NOT(ISBLANK( Docs_In_Date__c  )) &amp;&amp; ISBLANK(Fund_Date__c) , today()- DATEVALUE(Docs_In_Date__c), 
0))</formula>
    <label>Days b/w Docs In Date &amp; Fund Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>