unpackaged/main/default/objects/Opportunity/fields/Days_In_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Approval_Stage__c</fullName>
    <description>This field will measure the days an opportunity has been in the approval stage without advancing to the Docs Out Stage.</description>
    <formula>IF(
ISBLANK(  Offer_Out_Date__c  ),
NOW() -  APPROVAL_DATE__c ,
 Offer_Out_Date__c  - APPROVAL_DATE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will measure the days an opportunity has been in the approval stage without advancing to the Docs Out Stage.</inlineHelpText>
    <label>Days In Approval Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>