unpackaged/main/default/objects/Opportunity/fields/DBA_Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>DBA_Multiple_Locations__c</fullName>
    <description>This field will capture the DBA for a multiple location account.</description>
    <inlineHelpText>This field will capture the DBA for a multiple location account.</inlineHelpText>
    <label>DBA (Multiple Locations)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>