unpackaged/main/default/objects/Opportunity/fields/Deal_Queue_Builder__c.field-meta.xml
<CustomField>
    <fullName>Deal_Queue_Builder__c</fullName>
    <description>This field references the field Model Grade on the related WC Credit Decision record.</description>
    <formula>IF(
 Rush_Request__c = TRUE, '1',

IF(
OR(
 ISPICKVAL(Owner.UserType,'Standard'),
 CONTAINS(Broker_Account__r.Name, 'Quick Bridge')), '2',

IF(
 CONTAINS(Broker_Account__r.Name, 'Lendio'), '3',

IF(
 NOT(CONTAINS(Broker_Account__r.Name, 'Snap')), '4',

IF(
 CONTAINS(Broker_Account__r.Name, 'Snap'), '5',

'NA'
)))))</formula>
    <inlineHelpText>This field references the field Model Grade on the related WC Credit Decision record.</inlineHelpText>
    <label>Deal Queue Builder</label>
    <type>Text</type>
</CustomField>