unpackaged/main/default/objects/Opportunity/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <description>Customer Deposit</description>
    <inlineHelpText>Type in the amount of the customer's deposit.</inlineHelpText>
    <label>Deposit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>