unpackaged/main/default/objects/Opportunity/fields/Diff_Net_From_Lender__c.field-meta.xml
<CustomField>
    <fullName>Diff_Net_From_Lender__c</fullName>
    <description>Difference of actual minus calculated</description>
    <inlineHelpText>Difference of actual minus calculated</inlineHelpText>
    <label>Diff Net From Lender</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>