unpackaged/main/default/objects/Opportunity/fields/Difference_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Difference_For_Actual__c</fullName>
    <description>Difference_For_Actual</description>
    <inlineHelpText>[Calc Net Proceeds] – [Actual Proceeds]</inlineHelpText>
    <label>Difference</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>