unpackaged/main/default/objects/Opportunity/fields/Discount_PV_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Discount_PV_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount_PV_For_Actual</description>
    <inlineHelpText>Discount_PV_For_Actual</inlineHelpText>
    <label>Discount PV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>