unpackaged/main/default/objects/Opportunity/fields/Discount_PV_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Discount_PV_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the operations user will overwrite the Discount PV and Discount PV calculation will be based on the manually entered data.</description>
    <inlineHelpText>If this field is checked, the operations user will overwrite the Discount PV and Discount PV calculation will be based on the manually entered data.</inlineHelpText>
    <label>Discount PV Overwrite</label>
    <type>Checkbox</type>
</CustomField>