unpackaged/main/default/objects/Opportunity/fields/Discounted_Term_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Term_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discounted Term for actual</description>
    <inlineHelpText>Discounted Term for actual</inlineHelpText>
    <label>Discounted Term</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>