unpackaged/main/default/objects/Opportunity/fields/Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee__c</fullName>
    <description>Documentation fee</description>
    <inlineHelpText>Type in the amount of the documentation fee.</inlineHelpText>
    <label>Doc Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>