unpackaged/main/default/objects/Opportunity/fields/Doc_Fee_Collected__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Collected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Doc Fee Collected for actuals</description>
    <inlineHelpText>Doc Fee Collected for actuals</inlineHelpText>
    <label>Doc Fee Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>