unpackaged/main/default/objects/Opportunity/fields/Doc_Formulas_LU__c.field-meta.xml
<CustomField>
    <fullName>Doc_Formulas_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Formulas LU</label>
    <referenceTo>Doc_Formulas__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>