unpackaged/main/default/objects/Opportunity/fields/Docs_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Docs_Monthly_Payment__c</fullName>
    <description>This field will capture the amount of the customer's lease payment for documentation purposes.</description>
    <inlineHelpText>This field will capture the amount of the customer's lease payment for documentation purposes.</inlineHelpText>
    <label>Docs Payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>