unpackaged/main/default/objects/Opportunity/fields/Docs_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Docs_Payment_Frequency__c</fullName>
    <description>This field will determine the frequency at which the customer will repay the loan agreement.</description>
    <inlineHelpText>This field will determine the frequency at which the customer will repay the loan agreement.</inlineHelpText>
    <label>Docs Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>