unpackaged/main/default/objects/Opportunity/fields/Document_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Document_Delivery_Method__c</fullName>
    <description>This field will be used to indicate if documents will be sent to the customer via email or overnight courier.  This field will mainly be used for the Lease Record Types.</description>
    <inlineHelpText>Please indicate if the customer will receive the documentation package via email or overnight package.</inlineHelpText>
    <label>Document Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>2nd Day</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>