unpackaged/main/default/objects/Opportunity/fields/Document_Links__c.field-meta.xml
<CustomField>
    <fullName>Document_Links__c</fullName>
    <label>Document Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>