unpackaged/main/default/objects/Opportunity/fields/Documentator__c.field-meta.xml
<CustomField>
    <fullName>Documentator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that created the legal documents for an opportunity.</description>
    <inlineHelpText>This field should be populated with the user's name created the legal documents for the opportunity.</inlineHelpText>
    <label>Documentator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>