unpackaged/main/default/objects/Opportunity/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <label>Eligibility Date</label>
    <type>Date</type>
</CustomField>