unpackaged/main/default/objects/Opportunity/fields/Email_for_Opportunity_Events__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Opportunity_Events__c</fullName>
    <label>Email for Opportunity Events</label>
    <type>Email</type>
</CustomField>