unpackaged/main/default/objects/Opportunity/fields/End_Of_Lease_Amount_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Lease_Amount_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>End Of Lease Amount for actual</description>
    <inlineHelpText>End Of Lease Amount for actual</inlineHelpText>
    <label>End Of Lease Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>