unpackaged/main/default/objects/Opportunity/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contact</fullName>
                <default>true</default>
                <label>No Contact</label>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Missing Item</fullName>
            </value>
            <value>
                <fullName>Deal In Progress</fullName>
            </value>
            <value>
                <fullName>Not Yet Renewed - Warm</fullName>
            </value>
            <value>
                <fullName>Not Yet Renewed - Cold</fullName>
            </value>
            <value>
                <fullName>Program Issues</fullName>
            </value>
            <value>
                <fullName>Layered</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>FICO</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Mod</fullName>
            </value>
            <value>
                <fullName>TMF</fullName>
            </value>
            <value>
                <fullName>No Need Yet - Cold</fullName>
                <isActive>false</isActive>
                <label>No Need Yet - Cold</label>
            </value>
            <value>
                <fullName>No Need Yet - Warm</fullName>
                <isActive>false</isActive>
                <label>No Need Yet - Warm</label>
            </value>
            <value>
                <fullName>No Yet Renewed - Warm</fullName>
                <isActive>false</isActive>
                <label>No Yet Renewed - Warm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>