unpackaged/main/default/objects/Opportunity/fields/eNoah_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>eNoah_Complete_Date__c</fullName>
    <label>eNoah Complete Date</label>
    <type>DateTime</type>
</CustomField>