unpackaged/main/default/objects/Opportunity/fields/EPP_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>EPP_Active_Date__c</fullName>
    <description>This field will capture the date that an EPP Opportunity went into the Active Status. It will be updated by a workflow upon the Stage of the EPP Opportunity changing to Active.</description>
    <inlineHelpText>This field will capture the date that an EPP Opportunity went into the Active Status. It will be updated by a workflow upon the Stage of the EPP Opportunity changing to Active.</inlineHelpText>
    <label>EPP Active Date</label>
    <type>DateTime</type>
</CustomField>