unpackaged/main/default/objects/Opportunity/fields/EPP_Equip_LP__c.field-meta.xml
<CustomField>
    <fullName>EPP_Equip_LP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPP Equip - LP #</label>
    <type>Checkbox</type>
</CustomField>