unpackaged/main/default/objects/Opportunity/fields/EPP_Equip_PO_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>EPP_Equip_PO_to_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPP Equip - PO to Accounting</label>
    <type>Checkbox</type>
</CustomField>