unpackaged/main/default/objects/Opportunity/fields/EPP_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>EPP_Terminated_Date__c</fullName>
    <description>This field will capture when an EPP opportunity is terminated.</description>
    <inlineHelpText>This field will capture when an EPP opportunity is terminated.</inlineHelpText>
    <label>EPP Terminated Date</label>
    <type>DateTime</type>
</CustomField>