unpackaged/main/default/objects/Opportunity/fields/Eq_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eq_Amount__c</fullName>
    <description>Equipment Cost</description>
    <inlineHelpText>Type in the amount that the lessee's equipment will cost.</inlineHelpText>
    <label>Eq Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>